--- a/index.html
+++ b/index.html
@@ -5,11 +5,43 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>js test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="test.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
+  <link rel="stylesheet" type="text/css" media="screen" href="./index.css" />
+  <script src="./test.js"></script>
 </head>
-<body>
-  <div id="test-div">testing...</div>
+<body onload="defaultWeight()">
+  <header class="test-header">
+    <h1 id="test-div">testing...</h1>
+  </header>
+  <form>
+    Enter text: </br><input type="text" id="text-entry" placeholder="title text" onkeydown="return processKey(event)">
+  </form>
+  <div id="button-layout">
+    <button id="bold-button" onclick="buttonBold()">bold button</button>
+    <button id="color-button" onclick="buttonColor()">color button</button>
+    <button id="text-button" onclick="buttonText()">text button</button></br>
+  </div>
+<div>
+    Background Color: </br>
+    <button id="background-button" onclick="buttonBackgroundColor()">background color button</button>
+  </div>
+<form>
+  Enter numbers: </br> 
+  <input type="number" step="0.01" id="first-number" placeholder="first number">
+  <select id="operators">
+      <option value="plus">+</option>
+      <option value="minus">-</option>
+      <option value="mult">*</option>
+      <option value="divide">/</option>
+    </select>
+  <input type="number" step="0.01" id="second-number" placeholder="second number">
+</form>
+
+<button onclick="calculateFunction()">calculate</button>
+  <p id="sum"></p>
   
 </body>
+<footer class="footer">
+  <code>//Eric Ladage</code>
+</footer>
 </html>
