--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 <body onload="defaultWeight()">
   <header class="test-header">
+    <div id= "corner-div">0, 0, 0</div>
     <h1 id="test-div">testing...</h1>
   </header>
+  <div id="meat">
+    <div id="body-corner-div">test</div>
   <form>
     Enter text: </br><input type="text" id="text-entry" placeholder="title text" onkeydown="return processKey(event)">
   </form>
@@ -40,6 +43,7 @@
 <button onclick="calculateFunction()">calculate</button>
   <p id="sum"></p>
   
+</div>
 </body>
 <footer class="footer">
   <code>//Eric Ladage</code>
